# HttpServer

./: CMakeLists.txt  README.md  handle_client.c  handle_client.h  main.c  util.c
src/: handle_client.c  main.c  util.h
src/http/: message.c  message.h
src/request/: handle_client.c  headers.c  headers.h
src/test/: linked_list.c  linked_list.h  test_linked_list.c  test_linked_list.h  test_main.c
src/util/linkedlist/: linkedlist.c  linkedlist.h
